# git-mile

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  README.md  clippy.toml  default.nix  deny.toml  flake.nix  justfile  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.git-mile/: config.toml
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs  view.rs
core/: Cargo.toml
core/benches/: query_latency.rs  repository_lock.rs
core/src/: error.rs  lib.rs
core/src/clock/: mod.rs
core/src/dag/: entity.rs  git_backend.rs  mod.rs  pack.rs
core/src/identity/: mod.rs
core/src/issue/: mod.rs
core/src/mcp/: mod.rs
core/src/metrics/: mod.rs
core/src/mile/: mod.rs
core/src/model/: mod.rs
core/src/query/: mod.rs
core/src/repo/: cache.rs  lock.rs  mod.rs  sync.rs
core/src/service/: issues.rs  milestones.rs  mod.rs
core/tests/: comments.rs  concurrency.rs  labels.rs  mcp_protocol.rs  property_cache.rs  property_query.rs  repository_lock.rs
crates/git-mile/: Cargo.toml
crates/git-mile-app/: Cargo.toml
crates/git-mile-app/src/: actor.rs  async_store.rs  config.rs  filter_util.rs  lib.rs  service.rs  task_cache.rs  task_log.rs  task_repository.rs  task_writer.rs
crates/git-mile-app/tests/: hooks_integration_test.rs
crates/git-mile-core/: Cargo.toml
crates/git-mile-core/benches/: orswot.rs
crates/git-mile-core/src/: event.rs  id.rs  lib.rs  state.rs  text_matcher.rs
crates/git-mile-hooks/: Cargo.toml  README.md
crates/git-mile-hooks/src/: config.rs  error.rs  executor.rs  lib.rs  types.rs
crates/git-mile-hooks/tests/: hook_executor_test.rs
crates/git-mile-hooks/tests/fixtures/: echo-json.sh  failure.sh  success.sh  timeout.sh
crates/git-mile-store-git/: Cargo.toml
crates/git-mile-store-git/src/: error.rs  lib.rs
crates/git-mile-store-git/tests/: push_pull_tests.rs
crates/git-mile/src/: config.rs  event_log.rs  main.rs  mcp.rs  task_cache.rs  task_patch.rs  task_repository.rs  task_writer.rs  tui.rs
crates/git-mile/src/commands/: handlers.rs  mod.rs  service.rs  sync.rs
crates/git-mile/src/config/: keybindings.rs  mod.rs
crates/git-mile/src/mcp/: mod.rs  params.rs
crates/git-mile/src/mcp/tools/: add_comment.rs  common.rs  create_task.rs  get_task.rs  list_comments.rs  list_subtasks.rs  list_task_events.rs  list_tasks.rs  list_workflow_states.rs  mod.rs  update_comment.rs  update_task.rs
crates/git-mile/src/tui/: app.rs  clipboard.rs  constants.rs  editor.rs  mod.rs  task_cache.rs  task_visibility.rs  terminal.rs  tests.rs  tree_view.rs  ui.rs  view.rs
crates/git-mile/src/tui/handlers/: edit.rs  filter.rs  mod.rs  navigation.rs  state_picker.rs
crates/git-mile/src/tui/widgets/: detail_pane.rs  filter_bar.rs  mod.rs  popups.rs  task_list.rs  util.rs
docs/: cache-architecture.md  concurrency.md  hooks.md  identity.md  keybindings.md  persistence.md  query-engine.md  remote-sync.md  state-kind-persistence.md  task-writer-design.md  testing-strategy.md
docs/design/tui/: architecture.md  backlog.md  overview.md  requirements.md  risks.md
docs/guides/: lifecycle.md
docs/lint-pedantic/: plan.md
docs/reference/: cli.md  mcp-clients.md  mcp-protocol.md  mcp-server.md
docs/reference/examples/: mcp-session-list-show.json
tests/e2e/: Cargo.toml
tests/e2e/src/: lib.rs
tests/e2e/tests/: mcp.rs
