[workspace]
resolver = "3"
members = [
  "crates/git-mile",
  "crates/git-mile-core",
  "crates/git-mile-store-git"
]

[workspace.package]
edition = "2024"
rust-version = "1.90"
description = "Task tracking stored as Git commits under refs/git-mile/tasks/*"
readme = "README.md"
repository = "https://github.com/Warashi/git-mile"
license = "MIT"
keywords = ["cli", "git", "task-management"]
categories = ["command-line-utilities", "development-tools"]

[workspace.lints.clippy]
all = "deny"
cargo = "deny"
dbg_macro = "deny"
expect_used = "deny"
nursery = "deny"
pedantic = "deny"
unwrap_used = "deny"

[workspace.lints.rust]
missing_docs = "warn"
rust-2018-idioms = "deny"
unsafe_code = "forbid"
