[package]
name = "git-mile"
version.workspace = true
edition.workspace = true

[dependencies]
git_mile_core.workspace = true
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
git2 = { version = "0.19", features = ["vendored-openssl"] }
serde_json = "1.0"
tempfile = "3.10"
shlex = "1.3"
uuid = "1.8"
serde = { version = "1.0", features = ["derive"] }
