[package]
name = "git_mile_core"
version.workspace = true
edition.workspace = true

[dependencies]
git2 = { version = "0.19", features = ["vendored-openssl"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.10"
