[package]
name = "git_mile_core"
version.workspace = true
edition.workspace = true

[features]
property-tests = ["proptest"]

[dependencies]
git2 = { version = "0.19", features = ["vendored-openssl"] }
hex = "0.4"
serde_bytes = "0.11"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
fs2 = "0.4"
rocksdb = "0.22"
serde_cbor = "0.11"
crc32fast = "1.4"
nom = "7"
async-trait = "0.1"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "sync", "time"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
proptest = { version = "1.5", optional = true }

[dev-dependencies]
tempfile = "3.10"
criterion = { version = "0.5" }

[[bench]]
name = "repository_lock"
harness = false

[[bench]]
name = "query_latency"
harness = false
