[package]
name = "git-mile-app"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = "1.0"
git-mile-core = { path = "../git-mile-core" }
git-mile-hooks = { path = "../git-mile-hooks" }
git-mile-store-git = { path = "../git-mile-store-git" }
git2 = { version = "0.18", default-features = false }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1", features = ["rt", "sync"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3.12"

[lints]
workspace = true
