[package]
name = "git-mile-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ulid = "1"
time = { version = "0.3", features = ["macros", "serde", "formatting", "parsing"] }
thiserror = "1"
