[package]
name = "git-mile-core"
version = "0.1.0"
edition = "2024"
description.workspace = true
readme.workspace = true
repository.workspace = true
license = "MIT"
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = "1"
crdts = { version = "7", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = [
  "formatting",
  "macros",
  "parsing",
  "serde"
] }
uuid = { version = "1", features = ["serde", "v7"] }

[lints]
workspace = true
