[package]
name = "git-mile-store-git"
version = "0.1.0"
edition = "2024"
description.workspace = true
readme.workspace = true
repository.workspace = true
license = "MIT"
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = "1"
git-mile-core = { path = "../git-mile-core" }
git2 = { version = "0.18", default-features = false, features = [
  "https",
  "vendored-libgit2",
  "vendored-openssl"
] }
lru = "0.12"
serde_json = "1"
thiserror = "1"
time = { version = "0.3", features = ["formatting"] }
tracing = "0.1"

[lints]
workspace = true
