[package]
name = "git-mile"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
git-mile-core = { path = "../git-mile-core" }
git-mile-store-git = { path = "../git-mile-store-git" }
time = { version = "0.3", features = ["formatting"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "std"] }
ratatui = "0.29"
crossterm = "0.27"
shell-words = "1"
tempfile = "3"
