[package]
name = "git-mile"
version = "0.1.0"
edition = "2024"
description.workspace = true
readme.workspace = true
repository.workspace = true
license = "MIT"
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = "1"
arboard = "3"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
crossterm = "0.27"
dirs = "5"
git-mile-app = { path = "../git-mile-app" }
git-mile-core = { path = "../git-mile-core" }
git-mile-store-git = { path = "../git-mile-store-git" }
git2 = { version = "0.18", default-features = false }
ratatui = "0.29"
rmcp = "0.8"
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shell-words = "1"
tempfile = "3"
thiserror = "2"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["io-std", "macros", "rt-multi-thread"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "env-filter",
  "fmt",
  "std"
] }
unicode-segmentation = "1.11"

[lints]
workspace = true
